--- a/index.html
+++ b/index.html
@@ -39,10 +39,18 @@
         </nav>
     </section>
     <!-- header area close here -->
+
     <!-- Home area start here -->
     <section>
         <div class="main">
-            <div class="banner"><img src="/Images/banner.jpg" alt="banner"></div>
+            <div class="banner">
+                <div class="banner-content">
+                    <div class="container">
+                        <h1>World Most Rewarding <br> Crypto</h1>
+                    </div>
+                </div>
+                <img src="/Images/banner.jpg" alt="banner">
+            </div>
         </div>
     </section>
     <!-- Home area close here -->
