--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Buy<span
                                 class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Page 1</a></li>
+                            <li><a href="api.html">API</a></li>
                             <li><a href="#">Page 1</a></li>
                             <li><a href="#">Page 1</a></li>
                         </ul>
