--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Buy<span
                                 class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Page 1</a></li>
+                            <li><a href="api.html">API</a></li>
                             <li><a href="#">Page 1</a></li>
                             <li><a href="#">Page 1</a></li>
                         </ul>
@@ -46,7 +46,8 @@
             <div class="banner">
                 <div class="banner-content">
                     <div class="container">
-                        <h1>World Most Rewarding <br> Crypto</h1>
+                        <h1>World Most Rewarding <b class="font-weight-bold text-warning">Crypto!</b></h1>
+                   
                     </div>
                 </div>
                 <img src="/Images/banner.jpg" alt="banner">
