--- a/promise.html
+++ b/promise.html
@@ -9,44 +9,47 @@
 
 <body>
   <h2>Hello world..!!</h2>
-</body>
-<script>
-  // Task name:
-  // 1: 2s roll number 
-  // 2: 2s name & age 
-  const obj1 = new Promise((resolve, reject) => {
-    setTimeout(() => {
-      let rollNumber = [1, 2, 3, 4, 5];
-      resolve(rollNumber);
-      reject("Error while communicating");
-    }, 2000);
-  });
-
-  // Promises has two method
-  // 1> then()
-  // 1> catch()
-
-  const getBioData = () => {
-    return new Promise((resolve, reject) => {
-      setTimeout((indexData) => {
-        let bioData = {
-          name: "Kuldeep",
-          age: 27,
-        }
-      })
-      resolve(`My roll number is ${indexData} & name is ${bioData.name} & i'm ${bioData.age} year old. `);
-    }, 2000, indexData)
-  }
-
-
-  obj1
-    .then((rollNumber) => {
-      console.log(rollNumber);
-    })
-    .catch((error) => {
-      console.log(error, "Communication error.!");
+  <script>
+    // Task name:
+    // 1: 2s roll number 
+    // 2: 2s name & age 
+    const obj1 = new Promise((resolve, reject) => {
+      setTimeout(() => {
+        let rollNumber = [1, 2, 3, 4, 5];
+        resolve(rollNumber);
+        // reject("Error while communicating");
+      }, 2000);
     });
 
-</script>
+    // Promises has two method
+    // 1> then()
+    // 1> catch()
+
+      const getBioData = (indexData) => {
+        return new Promise((resolve, reject) => {
+          setTimeout((indexData) => {
+            let bioData = {
+              name: "Kuldeep",
+              age: 27,
+            }
+            resolve(`My roll number is ${indexData} & name is ${bioData.name} & i'm ${bioData.age} year old. `);
+          }
+          )
+        }, 2000, indexData)
+      }
+
+    obj1
+      .then((rollNumber) => {
+        console.log(rollNumber);
+        return getBioData(rollNumber[2])
+      }).then((data) => {
+        console.log(data)
+      })
+      .catch((error) => {
+        console.log(error, "Communication error.!");
+      });
+
+  </script>
+</body>
 
 </html>
