--- a/api.html
+++ b/api.html
@@ -2,20 +2,27 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
     <button target="_blank" onclick="homePage()">Home</button>
     <h2 id="ApiData"></h2>
-    <table>
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>ID</th>
                 <th>Name</th>
-                <th>Mobile Number</th>
+                <th>Email</th>
+                <th>Username</th>
+                <th>Address</th>
+                <th>Phone</th>
+                <th>Website</th>
+                <th>Company</th>
             </tr>
         </thead>
         <tbody id="tableBody">
@@ -28,22 +35,47 @@
     const apiUrl = "https://jsonplaceholder.typicode.com/users/"
 
     // fetch is a method provided by API 
-    fetch (apiUrl).then(response =>response.json())
-        .then((data)=>{
-            console.log(data)
-          const tableBody = document.getElementById("ApiData");
-          tableBody.innerHTML = data.map(item=>
-            `<tr ke={item}>
-                <td>${data.name}</td>
-                <td></td>
-                <td></td>
-            </tr>`
-          ).json('');
-        }).catch((error)=>{
-            console.log("Error found..!!", error)
+    // fetch (apiUrl).then(response =>response.json())
+    //     .then((data)=>{
+    //         console.log(data)
+    //       const tableBody = document.getElementById("ApiData");
+    //       tableBody.innerHTML = data.map(item=>
+    //         `<tr key={item}>
+    //             <td>${data.name}</td>
+    //             <td></td>
+    //             <td></td>
+    //         </tr>`
+    //       ).json('');
+    //     }).catch((error)=>{
+    //         console.log("Error found..!!", error)
+    //     })
+
+
+    document.addEventListener("DOMContentLoaded", function () {
+    // Fetch data from the URL
+    fetch("https://jsonplaceholder.typicode.com/users/")
+        .then(response => response.json())
+        .then(data => {
+            // Map data to table rows
+            const tableBody = document.getElementById("tableBody");
+            const tableRows = data.map(user => `
+                <tr>
+                    <td>${user.id}</td>
+                    <td>${user.name}</td>
+                    <td>${user.email}</td>
+                    <td>${user.username}</td>
+                    <td>${user.address.city}, ${user.address.street}, ${user.address.suite}</td>
+                    <td>${user.phone}</td>
+                    <td>${user.website}</td>
+                    <td>${user.company.name}</td>
+                </tr>
+            `).join("");
+
+            // Append rows to the table
+            tableBody.innerHTML = tableRows;
         })
-
-
+        .catch(error => console.error("Error fetching data:", error));
+});
     // async function fetchData (){
     //     const response = await axios.get(apiUrl).then((response) => {
     //     return data = response.json();
