--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
         </div>
     </section>
     <!-- Home area close here -->
+
+    <script>
+        arr = ['1',2,'1','3',4,'str',6,'str2'] 
+        //output will be [1,2,3,4,6]
+      const data =  arr.filter((item, i, letter) => letter.indexOf(item) === i && !isNaN(Number(item)
+            )).map(item => Number(item));
+            console.log(data);
+    </script>
 </body>
 
 </html>
