--- a/searchFilter.html
+++ b/searchFilter.html
@@ -15,13 +15,13 @@
         <br>
         <h3>Search data!</h3>
         <input type="text" id="" onchange="" placeholder="Search name/mobile/address">
-        <table class="table table-hover" >
+        <table class="table table-hover">
             <thead>
                 <tr>
-                    <th>Id </th>
-                    <th>Name </th>
-                    <th>Mobile </th>
-                    <th>Address </th>
+                    <th>Id</th>
+                    <th>Name</th>
+                    <th>Mobile</th>
+                    <th>Address</th>
                 </tr>
             </thead>
             <tbody>
@@ -45,7 +45,21 @@
                 </tr>
             </tbody>
         </table>
+        <div>
+            <p id="arrayData"></p>
+            <p id="arrayIndex"></p>
+        </div>
     </div>
+    <script>
+        const array = ['1',2,'1','3',4,'str',6,'str2'];
+        document.getElementById("arrayData").innerHTML = array;
+
+        const integer = array.Number(array);
+
+        document.getElementById("integerId").innerHTML = integer;
+        const data = array.indexOf(("str"))
+        document.getElementById("arrayIndex").innerHTML = data;
+    </script>
 </body>
 
 </html>
