--- a/api.html
+++ b/api.html
@@ -12,8 +12,8 @@
 <body>
     <button target="_blank" onclick="homePage()">Home</button>
     <h2 id="ApiData"></h2>
-     <input type="text" placeholder="Search here.."> <button type="btn btn-success">Submit</button>
-    <table class="table table-hover"> 
+     <input type="text" id="myInput" onkeyup="searchFunction()" placeholder="Search here.."> <button type="btn btn-success">Submit</button>
+    <table id="tableId" class="table table-hover"> 
         <thead>
             <tr>
                 <th>ID</th>
@@ -32,6 +32,27 @@
     </table>
     <!-- Data Render -->
 <script>
+
+
+const searchFunction = () =>{
+            let filter = document.getElementById("myInput").value.toUpperCase();
+            let tableId = document.getElementById("tableId");
+            let tr = document.getElementsByTagName('tr');
+
+            for(var i = 0; i<tr.length; i++){
+                let td = tr[i].getElementsByTagName('td')[1];
+
+                if(td){
+                    let contextValue = td.textContent || td.innerHTML;
+                    if(contextValue.toLocaleUpperCase().indexOf(filter)>-1){
+                       tr[1].style.display= ''; 
+                    }else{
+                        tr[i].style.display = 'none';
+                    }
+                }
+            }    
+        }
+
 
     const apiUrl = "https://jsonplaceholder.typicode.com/users/"
 
