--- a/textApi.html
+++ b/textApi.html
@@ -34,6 +34,7 @@
         console.log(data);
         // Filter posts with userId equal to 5
         const filteredData = data.filter(post => post.userId === 5);
+        console.log(filteredData);
         const tableBody = document.getElementById("tableBody");
 
         // fetch data in the table
@@ -44,10 +45,7 @@
                   <td>${user.title}</td>
                   </tr>
                   `).join("");
-
-
         tableBody.innerHTML = tableBodyRow;
-
     }
     fetchApiData();
 
