--- a/E-CommerceWebsite/index.html
+++ b/E-CommerceWebsite/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Commerce</title>
-
-    <!-- box    icons -->
+    <link rel="stylesheet" href="index.css">
+    <!-- box icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- slider Glide Js -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.theme.css">
@@ -14,9 +14,32 @@
 </head>
 
 <body>
+    <div class="container">
+        <header>
+            <div class="title">PRODUCT LIST</div>
+            <div class="icon-cart">
+                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 20">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M6 15a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm0 0h8m-8 0-1-4m9 4a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-9-4h10l2-7H3m2 7L3 4m0 0-.792-3H1" />
+                </svg>
+                <span>0</span>
+            </div>
+        </header>
+
+        <div class="list-product">
+            <div class="item">
+                <img src="/E-CommerceWebsite/images/banner.png" alt="">
+                <h2>NAME PRODUCT</h2>
+                <div class="price">$200</div>
+                <button type="button">Add to Cart</button>
+            </div>
+        </div>
+    </div>
 
     <!-- slider Glide Js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/glide.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
+
