--- a/E-CommerceWebsite/index.html
+++ b/E-CommerceWebsite/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.css">
 </head>
 
-<body>
+<body class="showCart">
     <div class="container">
         <header>
             <div class="title">PRODUCT LIST</div>
@@ -35,7 +35,31 @@
             </div>
         </div>
     </div>
-
+    <div class="cartTab">
+        <h1>Shopping Cart</h1>
+        <div class="listCart">
+           <div class="item">
+            <div class="image">
+                <img src="/E-CommerceWebsite/images/banner.png" alt="">
+            </div>
+            <div class="name">
+                Name
+            </div>
+            <div class="totalPrice">
+                $200
+            </div>
+            <div class="quantity">
+                <span class="minus"> < </span>
+                <span>1</span>
+                <span  class="plus"> > </span>
+            </div>
+           </div>
+        </div>
+        <div class="btn">
+            <button class="close">CLOSE</button>
+            <button class="check-out">CHECK OUT</button>
+        </div>
+    </div>
     <!-- slider Glide Js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/glide.js"></script>
     <script src="app.js"></script>
