--- a/E-CommerceWebsite/index.html
+++ b/E-CommerceWebsite/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <header>
             <div class="title">PRODUCT LIST</div>
-            <div class="icon-cart">
+            <div class="iconCart">
                 <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 20">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M6 15a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm0 0h8m-8 0-1-4m9 4a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-9-4h10l2-7H3m2 7L3 4m0 0-.792-3H1" />
@@ -38,22 +38,22 @@
     <div class="cartTab">
         <h1>Shopping Cart</h1>
         <div class="listCart">
-           <div class="item">
-            <div class="image">
-                <img src="/E-CommerceWebsite/images/banner.png" alt="">
+            <div class="item">
+                <div class="image">
+                    <img src="/E-CommerceWebsite/images/banner.png" alt="">
+                </div>
+                <div class="name">
+                    Name
+                </div>
+                <div class="totalPrice">
+                    $200
+                </div>
+                <div class="quantity">
+                    <span class="minus"> &lt; </span>
+                    <span>1</span>
+                    <span class="plus"> &gt; </span>
+                </div>
             </div>
-            <div class="name">
-                Name
-            </div>
-            <div class="totalPrice">
-                $200
-            </div>
-            <div class="quantity">
-                <span class="minus"> < </span>
-                <span>1</span>
-                <span  class="plus"> > </span>
-            </div>
-           </div>
         </div>
         <div class="btn">
             <button class="close">CLOSE</button>
@@ -66,4 +66,3 @@
 </body>
 
 </html>
-
