--- a/hofvsCallBackFun.html
+++ b/hofvsCallBackFun.html
@@ -8,6 +8,21 @@
 <!-- Higher-Order Functions(HoF): A function that takes another function(s) as an argument(s) and/or returns a function as a value.
 Callback Functions(CB): A function that is passed to another function. -->
 <body>
-    
+    <script>
+        // const arrayTest = [1, 2, 3, 4, ]
+        // const add = arrayTest.push(5);
+        // console.log(add);
+        // console.log(arrayTest);
+        const array1 = [1, 2, 3, 45, 75, 12, 23]
+        const array2 = [12, 31, 45, 75,  23, 29]
+        const combine = [...array1, ...array2]
+        console.log(combine);
+        if(combine % 2 == 0){
+            return even;
+        }else{
+            return odd;
+        }
+        // const filterData = combine.filter()
+    </script>
 </body>
 </html>
