--- a/E-CommerceWebsite/index.html
+++ b/E-CommerceWebsite/index.html
@@ -26,7 +26,7 @@
             </div>
         </header>
 
-        <div class="list-product">
+        <div class="listProduct">
             <div class="item">
                 <img src="/E-CommerceWebsite/images/banner.png" alt="">
                 <h2>NAME PRODUCT</h2>
@@ -37,7 +37,7 @@
     </div>
     <div class="cartTab">
         <h1>Shopping Cart</h1>
-        <div class="listCart">
+        <div class="listCar showCartt">
             <div class="item">
                 <div class="image">
                     <img src="/E-CommerceWebsite/images/banner.png" alt="">
@@ -63,6 +63,7 @@
     <!-- slider Glide Js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/glide.js"></script>
     <script src="app.js"></script>
+    <script type="text/javascript" src="products.json"></script>
 </body>
 
 </html>
